optimize some mem and gc config...